<resources>
    <string name="app_name">EasyGamer</string>
    <string name="easygamer">EasyGamer</string>
    <string name="dummy_gamename">Grand Theft Auto 5</string>
    <string name="description">Description</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque molestie ultricies orci, quis accumsan ipsum fringilla a. Donec iaculis ligula lacinia purus dictum, vitae aliquam purus consequat. Pellentesque semper elit sollicitudin nisi volutpat fermentum. Sed semper ut est ut consectetur. Sed felis sapien, dictum quis enim quis, lobortis fermentum leo. In viverra pulvinar iaculis.</string>
    <string name="title_favorite">favorite</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="favorite_btn">Simpan Sebagai Favorit</string>
    <string name="dummy_date">0000-00-00</string>
    <string name="released_date">Released Date</string>
    <string name="rating">Rating</string>
    <string name="genre">Genre</string>
    <string name="ezgamer">EasyGamer adalah aplikasi untuk melihat info terkait games yang kamu sukai</string>
    <string name="empty_fav">Kamu Belum Menambahkan Favorite</string>
</resources>